--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -143,7 +143,7 @@
     <ClCompile Include="web\test\Test.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="log\Log.h" />
+    <ClInclude Include="Log\log.h" />
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
   </ItemGroup>
