--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="server\Server.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="server\Server.h" />
     <ClCompile Include="web\test\Test.h" />
   </ItemGroup>
   <ItemGroup>
