--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -141,13 +141,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="server\Server.h" />
-    <ClCompile Include="web\test\Test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Log\log.h" />
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
     <ClInclude Include="web\login\Login.h" />
+    <ClInclude Include="web\test\Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
