--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -143,7 +143,8 @@
     <ClCompile Include="server\Server.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Log\log.h" />
+    <ClInclude Include="http\Http.h" />
+    <ClInclude Include="Log\Log.h" />
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
     <ClInclude Include="web\login\Login.h" />
