--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -144,9 +144,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="http\Http.h" />
+    <ClInclude Include="json\Json.h" />
     <ClInclude Include="log\Log.h" />
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
+    <ClInclude Include="web\default\Default.h" />
     <ClInclude Include="web\login\Login.h" />
     <ClInclude Include="web\test\Test.h" />
   </ItemGroup>
