--- a/Server01/Server01.vcxproj.filters
+++ b/Server01/Server01.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="log">
       <UniqueIdentifier>{9da05684-e46d-48b3-994c-a6ad0801b7c1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="json">
+      <UniqueIdentifier>{4af4ac61-2248-4448-b72d-812de9b53a45}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="server\Server.h">
@@ -40,6 +43,12 @@
       <Filter>log</Filter>
     </ClInclude>
     <ClInclude Include="web\login\Login.h">
+      <Filter>web</Filter>
+    </ClInclude>
+    <ClInclude Include="json\Json.h">
+      <Filter>json</Filter>
+    </ClInclude>
+    <ClInclude Include="web\default\Default.h">
       <Filter>web</Filter>
     </ClInclude>
   </ItemGroup>
