--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
     <ClInclude Include="web\default\Default.h" />
+    <ClInclude Include="web\error\Error.h" />
     <ClInclude Include="web\login\Login.h" />
     <ClInclude Include="web\test\Test.h" />
   </ItemGroup>
