--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="log\Log.h" />
     <ClInclude Include="route\Route.h" />
     <ClInclude Include="route\RouteABS.h" />
+    <ClInclude Include="sql\MySql.h" />
     <ClInclude Include="web\default\Default.h" />
     <ClInclude Include="web\error\Error.h" />
     <ClInclude Include="web\index\Index.h" />
