--- a/Server01/Server01.vcxproj.filters
+++ b/Server01/Server01.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="log">
       <UniqueIdentifier>{9da05684-e46d-48b3-994c-a6ad0801b7c1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sql">
+      <UniqueIdentifier>{bf8d843e-4f07-4c85-851c-843b7d33dfac}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="server\Server.h">
@@ -56,6 +59,9 @@
     </ClInclude>
     <ClInclude Include="web\index\Index.h">
       <Filter>web</Filter>
+    </ClInclude>
+    <ClInclude Include="sql\MySql.h">
+      <Filter>sql</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
