--- a/Server01/Server01.vcxproj
+++ b/Server01/Server01.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="http\Http.h" />
+    <ClInclude Include="imgAlg\DealImage02.h" />
     <ClInclude Include="json\Json.h" />
     <ClInclude Include="log\Log.h" />
     <ClInclude Include="route\Route.h" />
